k8s/api-gateway/api-gateway.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway
  namespace: intelligent-supply-chain

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template:

    metadata:
      labels:
        app: api-gateway

    spec:

      containers:

        - name: api-gateway

          image: yash01er/intelligent-api-gateway:v1

          imagePullPolicy: Always

          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service

metadata:
  name: api-gateway
  namespace: intelligent-supply-chain

spec:

  selector:
    app: api-gateway

  ports:
    - port: 8081
      targetPort: 8081

  type: LoadBalancer
