k8s/api-gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-gateway-ingress
  namespace: intelligent-supply-chain

spec:

  ingressClassName: nginx

  rules:

    - host: intelligent-supply-chain.local

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: api-gateway

                port:
                  number: 8081
